--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </div>
             <div class="socket-state">
                 <h3>Estado do Socket</h3>
-                <div class="socket-state-value" id="socket-state">BOUND</div>
+                <div class="socket-state-value" id="socket-state">CLOSED</div>
             </div>
         </div>
     </div>
